# sliding_window_ensemble

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  sliding_window_ensemble (1).ipynb  sliding_window_ensemble.ipynb
sliding_window_ensemble/: __init__.py  config.py  swea.py  test_batched.py  utils.py
tests/: __init__.py  test_config.py
