[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sliding-window-ensemble"
version = "0.1.0"
description = "LLMの推論コストを線形化するスライド窓アンサンブル法の実装"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "hashidaleo1011-collab"},
]
keywords = ["llm", "inference", "optimization", "ensemble", "sliding-window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/hashidaleo1011-collab/sliding_window_ensemble"
Repository = "https://github.com/hashidaleo1011-collab/sliding_window_ensemble"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "accelerate>=0.20",
]
